fix(gui): Scrollbars on instance items

--- a/gui/src/pages/instance/InstanceList.css
+++ b/gui/src/pages/instance/InstanceList.css
@@ -82,7 +82,7 @@
 
 .instance-list-item-bottom > div {
 	text-wrap: nowrap;
-	overflow-x: hidden;
+	overflow: hidden;
 }
 
 .instance-list-item:hover {
